sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/B2B_SubProdTerm__c.object-meta.xml
<CustomObject>
    <label>B2B SubProdTerm</label>
    <nameField>
        <label>B2B SubProdTerm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B_SubProdTerms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>