sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/B2B_Sub_Configuration__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sub_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Sub Configuration</label>
    <referenceTo>B2B_Sub_Configuration__c</referenceTo>
    <relationshipLabel>B2B SubProdTerms</relationshipLabel>
    <relationshipName>B2B_SubProdTerms</relationshipName>
    <type>Lookup</type>
</CustomField>