sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>