sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Ignore_Billing_Frequency_Fields__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Billing_Frequency_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Billing Frequency Fields</label>
    <type>Checkbox</type>
</CustomField>