sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Installment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Installment_Frequency__c</fullName>
    <label>Installment Frequency (Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>