sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Order_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Order_Frequency__c</fullName>
    <label>Order Frequency (Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>