sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Order_Frequency_UOM__c.field-meta.xml
<CustomField>
    <fullName>Order_Frequency_UOM__c</fullName>
    <label>Order Frequency UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>