sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Order_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Order_Term_Months__c</fullName>
    <formula>/*Raja Patnaik - 02/04/2021 - Formula to calculate the total term for the Order */
CASE(TEXT(Order_Frequency_UOM__c) ,
&quot;Monthly&quot;,Order_Count__c, 
&quot;Quarterly&quot;, Order_Count__c * Order_Frequency__c,
&quot;Annual&quot; , Order_Count__c * Order_Frequency__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>