sm/sm-b2b-connector/main/default/objects/B2B_SubProdTerm__c/fields/Upfront__c.field-meta.xml
<CustomField>
    <fullName>Upfront__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Upfront %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>